# yt-song-to-instrumental

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  label.yml.example  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_config.py  test_downloader.py  test_history.py  test_metadata.py  test_music_metadata.py  test_pipeline.py  test_playlists.py  test_preview.py  test_quality.py  test_separator.py  test_thumbnail.py  test_uploader.py  test_video_render.py
yt_song_to_instrumental/: channel.py  cli.py  config.py  constants.py  downloader.py  history.py  metadata.py  music_metadata.py  pipeline.py  playlists.py  preview.py  quality.py  thumbnail.py  uploader.py  video_render.py
yt_song_to_instrumental/separator/: __init__.py  base.py  demucs_backend.py  mdxnet_backend.py
